fix lastpass interfering with new review form

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <h5 class="modal-title" id="create-review-model-label">Create review</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <form id="new-review-form" role="form">
+                        <form id="new-review-form" role="form" data-lpignore="true">
                             <div class="modal-body">
                                 <div class="mb-3 form-floating">
                                     <input type="text" class="form-control" id="subject" placeholder="N/A" required>
