reviews form set textarea height

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                                     <label for="content" class="form-label">Content</label>
                                 </div>
                                 <div class="mb-3 form-floating">
-                                    <textarea class="form-control" id="additional-information" placeholder="N/A"></textarea>
+                                    <textarea class="form-control" id="additional-information" placeholder="N/A" rows="10"></textarea>
                                     <label for="additional-information" class="form-label">Additional information</label>
                                 </div>
                                 <div class="mb-3 form-floating">
-                                    <textarea class="form-control" id="resources" placeholder="N/A"></textarea>
+                                    <textarea class="form-control" id="resources" placeholder="N/A" rows="5"></textarea>
                                     <label for="resources" class="form-label">Resources</label>
                                 </div>
                             </div>
