--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 </head>
 <body>
-    <div class="card mx-5 mt-2">
+    <div class="card mx-1 mt-2">
         <div class="card-header">
             <h1 class="float-start">Reviews</h1>
             <button id="create-review-modal-btn" type="button" class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#create-review-model">Create review</button>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="card-body">
-            <div id="reviews-list" class="row row-cols-2 justify-content-evenly">
+            <div id="reviews-list" class="col">
 
             </div>
         </div>
