review resources allow links

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                                     <label for="additional-information" class="form-label">Additional information</label>
                                 </div>
                                 <div class="mb-3 form-floating">
-                                    <textarea class="form-control" id="resources" placeholder="N/A" rows="5"></textarea>
+                                    <textarea class="form-control" id="resources" placeholder="N/A" rows="5" aria-describedby="resourcesHelp"></textarea>
                                     <label for="resources" class="form-label">Resources</label>
+                                    <div id="resourcesHelp" class="form-text">Links must be on separate lines</div>
                                 </div>
                             </div>
                             <div class="modal-footer">
