modals all xl instead of lg

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="float-start">Reviews</h1>
             <button id="create-review-modal-btn" type="button" class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#create-review-model">Create review</button>
             <div class="modal fade" id="create-review-model" tabindex="-1" aria-labelledby="create-review-model-label" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
+                <div class="modal-dialog modal-xl">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="create-review-model-label">Create review</h5>
