new review form require subject and title

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="subject" class="form-label">Subject</label>
-                        <input type="text" class="form-control" id="subject">
+                        <input type="text" class="form-control" id="subject" required>
                     </div>
 
                     <div class="mb-3">
                         <label for="title" class="form-label">Title</label>
-                        <input type="text" class="form-control" id="title">
+                        <input type="text" class="form-control" id="title" required>
                     </div>
 
                     <label class="form-label">Resources</label>
