--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <button class="btn btn-primary ms-2" id="new-review-btn" data-bs-toggle="modal" data-bs-target="#modal-new-review">New review</button>
+                        <button class="btn btn-primary ms-2" id="new-review-btn" data-bs-toggle="modal" data-bs-target="#modal-new-review" onclick="onFormNewReviewBtn()">New review</button>
                     </li>
                 </ul>
             </div>
