--- a/index.html
+++ b/index.html
@@ -67,5 +67,30 @@
         </div>
     </div>
 </div>
+
+<div class="modal" tabindex="-1" id="modal-completed-review">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Enter mark</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form id="form-completed-review" onsubmit="completedReview(this)">
+                <div class="modal-body">
+                    <div class="input-group">
+                        <span class="input-group-text">Score</span>
+                        <input type="number" class="form-control" placeholder="mark" id="mark">
+                        <input type="number" class="form-control" placeholder="out of" id="max">
+                    </div>
+                    <input type="hidden" id="review-id" value="">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Mark as complete</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
